Fix icon alignment for course navigation

--- a/learning-mode.css
+++ b/learning-mode.css
@@ -186,3 +186,7 @@ body {
 .sensei-course-theme-lesson-actions {
   flex-direction: row-reverse;
 }
+
+.sensei-lms-course-navigation-lesson__link {
+  align-items: baseline;
+}
